force-app/main/default/objects/Hashtag_Room_Booking__c/Hashtag_Room_Booking__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores data about limits and pricing for Hashtag.</description>
    <label>Hashtag Room Booking</label>
</CustomObject>