force-app/main/default/objects/Hashtag_Room_Booking__c/fields/Conference_Room_Member_Price__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room_Member_Price__c</fullName>
    <label>Conference Room Member Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>