force-app/main/default/objects/Hashtag_Room_Booking__c/fields/Maximum_Conference_Room_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Conference_Room_Reservation__c</fullName>
    <inlineHelpText>Maximum length (in Minutes) a Conference Room can be booked.</inlineHelpText>
    <label>Maximum Conference Room Reservation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>