force-app/main/default/objects/Hashtag_Room_Booking__c/fields/Podcast_Booth_Member_Price__c.field-meta.xml
<CustomField>
    <fullName>Podcast_Booth_Member_Price__c</fullName>
    <label>Podcast Booth Member Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>