force-app/main/default/objects/Hashtag_Room_Booking__c/fields/Podcast_Booth_Reservation_Length__c.field-meta.xml
<CustomField>
    <fullName>Podcast_Booth_Reservation_Length__c</fullName>
    <inlineHelpText>Length (in minutes) that a Podcast booth is reserved.</inlineHelpText>
    <label>Podcast Booth Reservation Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>